[metadata]
name = tilemani 
version = 0.0.1
author = Hayley Song
author_email = haejinso@usc.edu
description = A collection of tools to retrieve OSM data, rasterize them into images with custom styles, compute geo-spatial features, and build models of urban space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cocoaaa/TileMani

[options]
packages = tilemani